--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,8 @@ version: '3.8'
 services:
   db:
     image: postgres:15
-    environment:
-      POSTGRES_DB: test
-      POSTGRES_USER: test
-      POSTGRES_PASSWORD: test
+    env_file:
+      - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -21,6 +19,8 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    env_file:
+      - .env
 
 volumes:
   postgres_data:
