--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ DB_HOST=db
 DB_PORT=5432
 
 # Django secret settings
-DJANGO_SECRET_KEY=your-secret-key
+DJANGO_SECRET_KEY='your-secret-key'
 DEBUG=True
